--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>hello it is my website </h1>
+    <p> here  it is some content </p>
 </body>
 </html>
